--- a/BasicAPI/appsettings.json
+++ b/BasicAPI/appsettings.json
@@ -13,5 +13,9 @@
   "JwtConfig": {
     "Secret": "5!6eWL%HPPqbGZ3Pa6#p9v_&x8!b2Vmz",
     "Expiration": 10.0
+  },
+  "ConnectionStrings": {
+    "CidenetDB": "Server=localhost;Database=CidenetDB;persist security info=True;user id=sa;password=B{B4/]Q8kMuw=Qn{;MultipleActiveResultSets=True"
   }
+
 }
